<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="menu_label_list_of_books">List of Books</string>
    <string name="menu_label_enter_isbn_number">Add Book</string>
    <string name="menu_label_scan_code">Scan Code</string>
    <string name="menu_label_Other">List of Books</string>
    <string name="menu_label_about">About this App</string>
    <string name="menu_label_settings">Settings</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="book_search_error">Could not complete the book search.</string>
    <string name="search">Search</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text_format">A must read book: %s</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="label_add_book">Add Book</string>
    <string name="label_empty_results">No Results found</string>
    <string name="message_book_added">Book Added successfully</string>
    <string name="message_book_add_failed_existing">Book has been already added</string>
    <string name="message_book_add_failed">Failed to add the book</string>
    <string name="message_invalid_isbn">Invalid ISBN number</string>
    <string name="message_isbn_hint_length">ISBNs have 13 digits</string>
    <string name="message_isbn_hint_digits">Enter digits only</string>
    <string name="message_isbn_hint_content">This is not an isbn number</string>
    <string name="preferences_key" translatable="false">pref_startFragment</string>
</resources>
