<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_book_list"
            android:icon="@drawable/ic_navigation_book_list"
            android:title="@string/menu_label_list_of_books" />

        <item
            android:id="@+id/navigation_enter_isbn"
            android:icon="@drawable/ic_navigation_add_book"
            android:title="@string/menu_label_enter_isbn_number" />


        <item
            android:id="@+id/otherGroup"
            android:title="Other">
            <menu>
                <item
                    android:id="@+id/navigation_settings"
                    android:icon="@drawable/ic_navigation_settings"
                    android:title="@string/menu_label_settings" />
                <item
                    android:id="@+id/navigation_about"
                    android:icon="@drawable/ic_navigation_about"
                    android:title="@string/menu_label_about" />
            </menu>
        </item>

    </group>
</menu>